# DecSkill

./: CMakeLists.txt  README.md
include/: FilterModule.h  GeneratorModule.h  IModule.h  ModuleFactory.h  RecorderModule.h
src/: FilterModule.cpp  GeneratorModule.cpp  ModuleFactory.cpp  RecorderModule.cpp  main.cpp
tests/: CMakeLists.txt  test_filter.cpp  test_generator.cpp  test_recorder.cpp
